[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/msc/Catalouge.png" type="Texture" id=1]
[ext_resource path="res://objects/ui/Catalouge.gd" type="Script" id=2]
[ext_resource path="res://images/ui/X/Asset 226.png" type="Texture" id=3]
[ext_resource path="res://sound/sfx/Paper Slide 1.ogg" type="AudioStream" id=4]

[node name="Catalouge" type="Node2D"]
script = ExtResource( 2 )

[node name="Catalouge" type="Sprite" parent="."]
position = Vector2( 1678, 270.25 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 486, 270 )
current = true

[node name="Sidebar" type="ColorRect" parent="Camera2D"]
margin_left = -608.0
margin_top = -398.0
margin_right = -361.0
margin_bottom = 370.0
color = Color( 1, 1, 1, 0.439216 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sidebar2" type="ColorRect" parent="Camera2D"]
margin_left = 361.0
margin_top = -406.0
margin_right = 608.0
margin_bottom = 378.0
color = Color( 1, 1, 1, 0.439216 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Camera2D"]
margin_left = 279.0
margin_top = -271.0
margin_right = 375.0
margin_bottom = -169.0
rect_scale = Vector2( 0.747661, 0.747661 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Slide1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Slide2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="mouse_entered" from="Camera2D/Sidebar" to="." method="_on_Sidebar_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Sidebar" to="." method="_on_Sidebar_mouse_exited"]
[connection signal="mouse_entered" from="Camera2D/Sidebar2" to="." method="_on_Sidebar2_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Sidebar2" to="." method="_on_Sidebar2_mouse_exited"]
[connection signal="pressed" from="Camera2D/TextureButton" to="." method="_on_TextureButton_pressed"]
